# sfalchemy

./: .gitignore  README.md  pyproject.toml
aws/: README.md
aws/img/: aws_s3_staging.drawio
aws/modules/s3/: main.tf  outputs.tf  role.tf  variables.tf
aws/proto/: README.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
sample/: .env.sample  README.md  run.py
sample/alembic_migrate/: env.py
sample/alembic_migrate/versions/: 6f684b324977_add_memo_to_t_category.py  a82b89ad4982_commit_message.py  b8145f562837_primary_keys.py
sample/metadata/: __init__.py
sample/models/: tickit.py  tpcds.py  tpch.py
sample/sql/: tcph_lineitem.sql
sample/sql/redshift/: README.md
sample/sql/snowflake/: README.md  datastage_create.txt  datastage_desc.txt  grants.txt  stages.txt  tickit_create_stage.txt  tickit_grant.txt  tickit_grant_usage.txt  tickit_load_venue.txt  tickit_select_venue.txt  users.txt
sample/tickit/: commands.py  models.py
sfalchemy/: README.md  run.py
tpch_sf/: .env.sample  inspect.bash  models.py
tpch_sf/metadata/: __init__.py
