[tool.poetry]
name = "sfalchemy"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alchemy-modelgen = "^0.1.6.1"
click = "^8.1.3"
django-environ = "^0.9.0"
pandas = "^1.5.2"
snowflake-connector-python = {extras = ["pandas"], version = "^2.9.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
