[tool.poetry]
name = "sfalchemy"
version = "0.1.0"
description = ""
authors = ["user.name <gmail@hdknr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alchemy-modelgen = "^0.1.6.1"
click = "^8.1.3"
django-environ = "^0.9.0"
pandas = "^1.5.2"
snowflake-connector-python = {extras = ["pandas"], version = "^2.9.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 119
multi_line_output = 3

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,W503,W504"
exclude = "migrations"